--- a/ilab/src/main/webapp/parametros/ciudad/view.xhtml
+++ b/ilab/src/main/webapp/parametros/ciudad/view.xhtml
@@ -30,7 +30,7 @@
 			<h:outputText id="ciudadBeanCiudadIdCiudad" value="#{ciudadBean.ciudad.idCiudad}"/>
 			<h:outputText/>
 			<h:outputLabel for="ciudadBeanCiudadDepartamento" value="Departamento:"/>
-			<h:link id="ciudadBeanCiudadDepartamento" outcome="/departamento/view" rendered="#{!empty ciudadBean.ciudad.departamento}" value="#{ciudadBean.ciudad.departamento}">
+			<h:link id="ciudadBeanCiudadDepartamento" outcome="/parametros/departamento/view" rendered="#{!empty ciudadBean.ciudad.departamento}" value="#{ciudadBean.ciudad.departamento.nombre}">
 				<f:param name="id" value="#{ciudadBean.ciudad.departamento.idDepartamento}"/>
 			</h:link>
 			<h:outputText/>
@@ -78,27 +78,9 @@
 					</f:facet>
 					<h:link outcome="/parametros/persona/view">
 						<f:param name="id" value="#{_item.idPersona}"/>
-						<h:outputText id="itemNombre" value="#{_item.nombre}"/>
+						<h:outputText id="itemNombre" value="#{_item.nombre} #{_item.apellidoPaterno} #{_item.apellidoMaterno}"/>
 					</h:link>
-				</h:column>
-				<h:column>
-					<f:facet name="header">
-						<h:outputText value="Apellido Paterno"/>
-					</f:facet>
-					<h:link outcome="/parametros/persona/view">
-						<f:param name="id" value="#{_item.idPersona}"/>
-						<h:outputText id="itemApellidoPaterno" value="#{_item.apellidoPaterno}"/>
-					</h:link>
-				</h:column>
-				<h:column>
-					<f:facet name="header">
-						<h:outputText value="Apellido Materno"/>
-					</f:facet>
-					<h:link outcome="/parametros/persona/view">
-						<f:param name="id" value="#{_item.idPersona}"/>
-						<h:outputText id="itemApellidoMaterno" value="#{_item.apellidoMaterno}"/>
-					</h:link>
-				</h:column>
+				</h:column>								
 				<h:column>
 					<f:facet name="header">
 						<h:outputText value="Documento Identidad"/>
